# taf_tasks

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  production.yaml  pyproject.toml
app/: __init__.py
app/configuration/: __init__.py  events.py  server.py
app/internal/pkg/middlewares/: handle_http_exceptions.py  x_auth_token.py
app/internal/pkg/models/: routes.py
app/internal/repositories/: __init__.py  repository.py
app/internal/repositories/postgres/: __init__.py  connection.py  tags.py  tasks.py
app/internal/repositories/postgres/handlers/: __init__.py  collect_response.py
app/internal/routes/: __init__.py  tags.py  tasks.py
app/internal/services/: __init__.py  tags.py  tasks.py
app/pkg/connectors/: __init__.py  base_connector.py  postgres.py
app/pkg/logger/: __init__.py  logger.py
app/pkg/models/: __init__.py  logger.py  tag.py  task.py
app/pkg/models/base/: exception.py  model.py
app/pkg/models/core/: containers.py
app/pkg/models/exceptions/: boost.py  city.py  currency.py  repository.py  x_auth_token.py
app/pkg/models/exceptions/clients/: __init__.py
app/pkg/settings/: __init__.py  settings.py
docker/api/: Dockerfile
docker/postgres_migrations/: Dockerfile
migrations/: 20230514_01_2F6aE-create-tasks-table.py  20230527_01_nfZ7s-create-tags-table.py  20230527_02_sYKYK-create-users-tags-table.py  20230527_03_BTq6f-create-tags-on-tasks-table.py
scripts/: migrate.py
